--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && mocha dist/tests/**/*.test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/parsimmon": "^1.10.9",
     "parsimmon": "^1.18.1"
+  },
+  "devDependencies": {
+    "@tsconfig/node20": "^20.1.2",
+    "@types/chai": "^4.3.11",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.10.6",
+    "chai": "^5.0.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.3.3"
   }
 }
